# hyteg-operators

./: .gitignore  .gitlab-ci.yml  README.md  operators-adiabatic_heating.toml  operators-advection.toml  operators-curl_curl.toml  operators-diffusion.toml  operators-diffusion_inv_rho.toml  operators-div_k_grad.toml  operators-divergence.toml  operators-epsilon.toml  operators-full_stokes.toml  operators-grad_rho_rho.toml  operators-gradient.toml  operators-k_divdiv.toml  operators-k_mass.toml  operators-mass.toml  operators-rho_g_mass.toml  operators-shear_heating.toml  operators-supg_adiabatic_heating.toml  operators-supg_advection.toml  operators-supg_diffusion.toml  operators-supg_mass.toml  operators-supg_shear_heating.toml  operators-terraneo.toml  operators.toml
operators/: CMakeLists.txt
operators/adiabatic_heating/: CMakeLists.txt  P2ElementwiseAdiabaticHeatingAnnulusMap.cpp  P2ElementwiseAdiabaticHeatingAnnulusMap.hpp  P2ElementwiseAdiabaticHeatingIcosahedralShellMap.cpp  P2ElementwiseAdiabaticHeatingIcosahedralShellMap.hpp
operators/advection/: CMakeLists.txt  P2ElementwiseAdvection.cpp  P2ElementwiseAdvection.hpp  P2ElementwiseAdvectionAnnulusMap.cpp  P2ElementwiseAdvectionAnnulusMap.hpp  P2ElementwiseAdvectionIcosahedralShellMap.cpp  P2ElementwiseAdvectionIcosahedralShellMap.hpp
operators/curl_curl/: CMakeLists.txt  N1E1ElementwiseCurlCurl.cpp  N1E1ElementwiseCurlCurl.hpp
operators/diffusion/: CMakeLists.txt  P1ElementwiseDiffusion.cpp  P1ElementwiseDiffusion.hpp  P1ElementwiseDiffusionParametricP1Map.cpp  P1ElementwiseDiffusionParametricP1Map.hpp  P2ElementwiseDiffusion.cpp  P2ElementwiseDiffusion.hpp  P2ElementwiseDiffusionAnnulusMap.cpp  P2ElementwiseDiffusionAnnulusMap.hpp  P2ElementwiseDiffusionIcosahedralShellMap.cpp  P2ElementwiseDiffusionIcosahedralShellMap.hpp  P2ElementwiseDiffusionParametricP2Map.cpp  P2ElementwiseDiffusionParametricP2Map.hpp  P2PlusBubbleElementwiseDiffusion.cpp  P2PlusBubbleElementwiseDiffusion.hpp  P2PlusBubbleElementwiseDiffusionAnnulusMap.cpp  P2PlusBubbleElementwiseDiffusionAnnulusMap.hpp
operators/diffusion_inv_rho/: CMakeLists.txt  P2ElementwiseDiffusionInvRho.cpp  P2ElementwiseDiffusionInvRho.hpp  P2ElementwiseDiffusionInvRhoAnnulusMap.cpp  P2ElementwiseDiffusionInvRhoAnnulusMap.hpp  P2ElementwiseDiffusionInvRhoIcosahedralShellMap.cpp  P2ElementwiseDiffusionInvRhoIcosahedralShellMap.hpp
operators/div_k_grad/: CMakeLists.txt  P1ElementwiseDivKGrad.cpp  P1ElementwiseDivKGrad.hpp  P1ElementwiseDivKGradAnnulusMap.cpp  P1ElementwiseDivKGradAnnulusMap.hpp  P1ElementwiseDivKGradIcosahedralShellMap.cpp  P1ElementwiseDivKGradIcosahedralShellMap.hpp  P2ElementwiseDivKGrad.cpp  P2ElementwiseDivKGrad.hpp  P2ElementwiseDivKGradAnnulusMap.cpp  P2ElementwiseDivKGradAnnulusMap.hpp  P2ElementwiseDivKGradIcosahedralShellMap.cpp  P2ElementwiseDivKGradIcosahedralShellMap.hpp  P2ElementwiseDivKGradP1Coefficient.cpp  P2ElementwiseDivKGradP1Coefficient.hpp  P2ElementwiseDivKGradP1CoefficientAnnulusMap.cpp  P2ElementwiseDivKGradP1CoefficientAnnulusMap.hpp  P2ElementwiseDivKGradP1CoefficientIcosahedralShellMap.cpp  P2ElementwiseDivKGradP1CoefficientIcosahedralShellMap.hpp  P2ElementwiseDivKGradP1CoefficientParametricP2Map.cpp  P2ElementwiseDivKGradP1CoefficientParametricP2Map.hpp
operators/divergence/: CMakeLists.txt  P2ToP1ElementwiseDivergenceAnnulusMap_0_0.cpp  P2ToP1ElementwiseDivergenceAnnulusMap_0_0.hpp  P2ToP1ElementwiseDivergenceAnnulusMap_0_1.cpp  P2ToP1ElementwiseDivergenceAnnulusMap_0_1.hpp  P2ToP1ElementwiseDivergenceIcosahedralShellMap_0_0.cpp  P2ToP1ElementwiseDivergenceIcosahedralShellMap_0_0.hpp  P2ToP1ElementwiseDivergenceIcosahedralShellMap_0_1.cpp  P2ToP1ElementwiseDivergenceIcosahedralShellMap_0_1.hpp  P2ToP1ElementwiseDivergenceIcosahedralShellMap_0_2.cpp  P2ToP1ElementwiseDivergenceIcosahedralShellMap_0_2.hpp  P2ToP1ElementwiseDivergence_0_0.cpp  P2ToP1ElementwiseDivergence_0_0.hpp  P2ToP1ElementwiseDivergence_0_1.cpp  P2ToP1ElementwiseDivergence_0_1.hpp  P2ToP1ElementwiseDivergence_0_2.cpp  P2ToP1ElementwiseDivergence_0_2.hpp  P2VectorToP1ElementwiseDivergence.cpp  P2VectorToP1ElementwiseDivergence.hpp  P2VectorToP1ElementwiseDivergenceAnnulusMap.cpp  P2VectorToP1ElementwiseDivergenceAnnulusMap.hpp  P2VectorToP1ElementwiseDivergenceCompressible.cpp  P2VectorToP1ElementwiseDivergenceCompressible.hpp  P2VectorToP1ElementwiseDivergenceCompressibleAnnulusMap.cpp  P2VectorToP1ElementwiseDivergenceCompressibleAnnulusMap.hpp  P2VectorToP1ElementwiseDivergenceCompressibleIcosahedralShellMap.cpp  P2VectorToP1ElementwiseDivergenceCompressibleIcosahedralShellMap.hpp  P2VectorToP1ElementwiseDivergenceCompressibleParametricP2Map.cpp  P2VectorToP1ElementwiseDivergenceCompressibleParametricP2Map.hpp  P2VectorToP1ElementwiseDivergenceIcosahedralShellMap.cpp  P2VectorToP1ElementwiseDivergenceIcosahedralShellMap.hpp  P2VectorToP1ElementwiseDivergenceParametricP2Map.cpp  P2VectorToP1ElementwiseDivergenceParametricP2Map.hpp  P2VectorToP1ElementwiseDivergenceRotationAnnulusMap.cpp  P2VectorToP1ElementwiseDivergenceRotationAnnulusMap.hpp  P2VectorToP1ElementwiseDivergenceRotationCompressibleAnnulusMap.cpp  P2VectorToP1ElementwiseDivergenceRotationCompressibleAnnulusMap.hpp  P2VectorToP1ElementwiseDivergenceRotationCompressibleIcosahedralShellMap.cpp  P2VectorToP1ElementwiseDivergenceRotationCompressibleIcosahedralShellMap.hpp  P2VectorToP1ElementwiseDivergenceRotationIcosahedralShellMap.cpp  (+5 more)
operators/epsilon/: CMakeLists.txt  P2ElementwiseEpsilonAnnulusMap_0_0.cpp  P2ElementwiseEpsilonAnnulusMap_0_0.hpp  P2ElementwiseEpsilonAnnulusMap_0_1.cpp  P2ElementwiseEpsilonAnnulusMap_0_1.hpp  P2ElementwiseEpsilonAnnulusMap_1_0.cpp  P2ElementwiseEpsilonAnnulusMap_1_0.hpp  P2ElementwiseEpsilonAnnulusMap_1_1.cpp  P2ElementwiseEpsilonAnnulusMap_1_1.hpp  P2ElementwiseEpsilonIcosahedralShellMap_0_0.cpp  P2ElementwiseEpsilonIcosahedralShellMap_0_0.hpp  P2ElementwiseEpsilonIcosahedralShellMap_0_1.cpp  P2ElementwiseEpsilonIcosahedralShellMap_0_1.hpp  P2ElementwiseEpsilonIcosahedralShellMap_0_2.cpp  P2ElementwiseEpsilonIcosahedralShellMap_0_2.hpp  (+54 more)
(+2958 files in other folders)
