add_compile_options( "-Wno-shadow" )

if(NOT WALBERLA_DOUBLE_ACCURACY)
   add_compile_options( "-Wno-float-conversion" )
   add_compile_options( "-Wno-implicit-float-conversion" )
endif()

add_compile_options( "-Wno-unused-variable" )

add_subdirectory(adiabatic_heating)
add_subdirectory(advection)
add_subdirectory(curl_curl)
add_subdirectory(diffusion)
add_subdirectory(diffusion_inv_rho)
add_subdirectory(div_k_grad)
add_subdirectory(divergence)
add_subdirectory(epsilon)
add_subdirectory(full_stokes)
add_subdirectory(grad_rho_rho)
add_subdirectory(gradient)
add_subdirectory(k_divdiv)
add_subdirectory(k_mass)
add_subdirectory(mass)
add_subdirectory(rho_g_mass)
add_subdirectory(shear_heating)
add_subdirectory(supg_adiabatic_heating)
add_subdirectory(supg_advection)
add_subdirectory(supg_diffusion)
add_subdirectory(supg_mass)
add_subdirectory(supg_shear_heating)
add_subdirectory(terraneo)
